--- a/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
+	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>  		
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     </style>
@@ -9,7 +10,7 @@
 
 <body>
 	<div class="wrap">
-	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>  		
+
 		<div class="body-wrap">
 			<div class="contents">
 				
@@ -124,24 +125,24 @@
 							</div>
 							
 							<div class="member-box sec-chk">
-								<input type="checkbox" id="a1" name="cc" />
-								<label for="a1" class="sec-lav"><span></span>
+								<input type="checkbox" id="chk_agree" name="cc" />
+								<label for="chk_agree" class="sec-lav"><span></span>
 									상기 딜링아트 회원탈퇴 시 처리사항 안내를 확인하였음에 동의합니다.
 									<div class="cehck-div">보안을 위해 회원님의 이름과 계정 이메일 및 비밀번호를 확인 합니다.</div>
 								</label>							
 							
+								<!-- <div class="input-box">
+									<input type="text" class="input-3" id="txt_name" placeholder="이름" />
+								</div> -->
 								<div class="input-box">
-									<input type="text" class="input-3" placeholder="이름" />
-								</div>
-								<div class="input-box">
-									<input type="text" class="input-3" placeholder="이메일" />
+									<input type="text" class="input-3" id="txt_email" placeholder="이메일" />
 								</div>					
 								<div class="input-box">
-									<input type="text" class="input-3" placeholder="비밀번호" />
+									<input type="password" class="input-3" id="txt_password" placeholder="비밀번호" />
 								</div>
 					
 								<div class="bat-box3 mg_t65">
-									<button type="button" class="ba-btn1"><span>확인</span></button>
+									<button type="button" class="ba-btn1" onclick="submit()"><span>확인</span></button>
 								</div>
 								
 							</div>
@@ -156,145 +157,160 @@
 	</div>
 
 <script type="text/javascript">      
-      
-      $(window).on("resize", function () {
-	   	    if(window.matchMedia('(min-width: 1537px)').matches)
-	   	    {
-		   	    document.querySelectorAll(".item").forEach((item) => {
-		       	     item.style.gridRowEnd = `span ${item.clientHeight + 0}`;
-		       	  });
-		       	  const wrap = document.querySelector(".columns-wrap2");
-		       	  wrap.style.display = "grid";
-		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, 353px)";
-		       	  wrap.style.gridAutoRows = "1px";
-		       	  
-		       	  
-	   	    	
-	   	    	
-	   	    }  else if(window.matchMedia('(min-width: 751px)').matches) {
-	   	    	
-		   	      document.querySelectorAll(".item").forEach((item) => {
-		       	     item.style.gridRowEnd = `span ${item.clientHeight + 280}`;
-		       	  });
-		       	  const wrap = document.querySelector(".columns-wrap2");
-		       	  wrap.style.display = "grid";
-		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, 65rem)";
-		       	  wrap.style.gridAutoRows = "1px";
-		       	
-	   	    	
-	   	     } else {
-	   	    	var swiper = new Swiper(".mySwiper2", {
-	   	          slidesPerView: 1,
-	   	          slidesPerGroup: 1,
-	   	          loop: true,
-	   	          loopFillGroupWithBlank: true,
-	   	          pagination: {
-	   	            el: ".swiper-pagination",
-	   	            clickable: true,
-	   	          },
-	   	          navigation: {
-	   	            nextEl: ".swiper-button-next",
-	   	            prevEl: ".swiper-button-prev",
-	   	          },
-	   	     });
-	   	    	
-	   	    	document.querySelectorAll(".item").forEach((item) => {
-		       	     item.style.gridRowEnd = `span ${item.clientHeight + 150}`;
-		       	  });
-		       	  const wrap = document.querySelector(".columns-wrap2");
-		       	  wrap.style.display = "grid";
-		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, )";
-		       	  wrap.style.gridAutoRows = "1px";
-	   	    	
-	       	  
-	   	     };
-	   	}).resize();
-      
-      
-      
-      $(document).ready(function () {
-	      $(".elm").hover(
-	    	function(){ $(this).addClass('hover') },
-	   	    function(){ $(this).removeClass('hover') }
-	   	  )
-	   	  $(".cn-b").hover(
-	    	function(){ $(this).addClass('gis') },
-	   	    function(){ $(this).removeClass('gis') }
-	   	  )
-      });
-      
-      $(function() {                      
-    	  $(".bab-bo").click(function() { 
-    	    $(this).toggleClass("bashow");     
-    	  });
-    	  
-    	  $(".lg-my").click(function() { 
-      	    $('.bg-sh').toggleClass('bg-show');     
-      	 	 $('.s-hov').toggleClass('s-hov-show');     
+$(window).on("resize", function () {
+    if(window.matchMedia('(min-width: 1537px)').matches){
+  	    document.querySelectorAll(".item").forEach((item) => {
+      	     item.style.gridRowEnd = `span ${item.clientHeight + 0}`;
       	  });
-    	  
-    	});
-      
-      
-      
-      
-      /* 메뉴바 FIXED */
-      if (jQuery(window).width() > 0) {
-          jQuery(window).on("scroll",function(ev){
-              if(jQuery(window).scrollTop() > 80 ) { /* 해당 높이를 벗어나면 fixed 클래스 추가 */
-                  jQuery('.head-wrap').addClass('fixed');
-              }
-              else{
-                  jQuery('.head-wrap').removeClass('fixed');
-              }
-              return false;
-          });
-      }
-      
-      
-      /* jQuery(function($) {
+  	    
+    }else if(window.matchMedia('(min-width: 751px)').matches) {
+    	
+  	      document.querySelectorAll(".item").forEach((item) => {
+      	     item.style.gridRowEnd = `span ${item.clientHeight + 280}`;
+      	  });
+    	
+    }else{
+    	var swiper = new Swiper(".mySwiper2", {
+          slidesPerView: 1,
+          slidesPerGroup: 1,
+          loop: true,
+          loopFillGroupWithBlank: true,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev"
+          }
+     });
+    	
+    	document.querySelectorAll(".item").forEach((item) => {
+      	     item.style.gridRowEnd = `span ${item.clientHeight + 150}`;
+      	  });
+  	  
+     }
+}).resize();
 
-    	    window.onresize = function(){
-    	      document.location.reload();
-    	    };
 
-    	}); */
-      
-      
-      
-      var delay = 300;
-      var timer = null;
 
-      //Javascript
-      window.addEventListener('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
+$(function () {
+  $(".elm").hover(
+	function(){ $(this).addClass('hover') },
+	    function(){ $(this).removeClass('hover') }
+	  )
+	  $(".cn-b").hover(
+	function(){ $(this).addClass('gis') },
+	    function(){ $(this).removeClass('gis') }
+	  )
+});
 
-      //jQuery
-      $(window).on('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
-      
-      $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
-    	    // The event won't be propagated up to the document NODE and 
-    	    // therefore delegated events won't be fired
-    	    event.stopPropagation();
-    	});
-      
-      
-      
-    </script>
-    
+$(function() {                      
+  $(".bab-bo").click(function() { 
+    $(this).toggleClass("bashow");     
+  });
+  
+  $(".lg-my").click(function() { 
+	    $('.bg-sh').toggleClass('bg-show');     
+	 	$('.s-hov').toggleClass('s-hov-show');     
+	  });
+  
+});
+
+$(function() {
+	/* 메뉴바 FIXED */
+	if (jQuery(window).width() > 0) {
+	  jQuery(window).on("scroll",function(ev){
+	      if(jQuery(window).scrollTop() > 80 ) { /* 해당 높이를 벗어나면 fixed 클래스 추가 */
+	          jQuery('.head-wrap').addClass('fixed');
+	      }else{
+	          jQuery('.head-wrap').removeClass('fixed');
+	      }
+	      return false;
+	  });
+	}
+});
+
+/* jQuery(function($) {
+
+    window.onresize = function(){
+      document.location.reload();
+    };
+
+}); */
+
+
+
+var delay = 300;
+var timer = null;
+
+//Javascript
+window.addEventListener('resize', function(){
+	clearTimeout(timer);
+	timer = setTimeout(function(){
+		document.location.reload();
+	}, delay);
+});
+
+//jQuery
+$(window).on('resize', function(){
+	clearTimeout(timer);
+	timer = setTimeout(function(){
+		document.location.reload();
+	}, delay);
+});
+
+$('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
+    // The event won't be propagated up to the document NODE and 
+    // therefore delegated events won't be fired
+    event.stopPropagation();
+});
+
+
 	
-	
-	
-	
+	function submit(){
+		var param = new Object();
+		
+		//var name = $("#txt_name").val();
+    	var email = $("#txt_email").val();
+    	var password = $("#txt_password").val();
+    	//if(name == null || name == "" || name == undefined){
+    		//modalAlertShow("이름을 입력해주세요.", "txt_name");
+    	if(!document.getElementById('chk_agree').checked){
+			modalAlertShow("회원탈퇴에 동의해주세요.", "chk_agree");
+			//alert("동의해주세요.");
+		}else if(email == null || email == "" || email == undefined){
+    		modalAlertShow("이메일을 입력해주세요.", "txt_email");
+    	}else if(password == null || password == "" || password == undefined){
+    		modalAlertShow("비밀번호를 입력해주세요.", "txt_password");
+    	}else{
+    		//param.name = name;
+    		param.email = email;
+    		param.password = password;
+    		modalConfirm("알림", "정말 회원탈퇴를 하시겠습니까?", function(callback){
+    			if(callback){
+    				$.ajax({
+    		    		type: "post",
+    		    	    url: "/withdrawalSubmit",
+    		    	    data: param,
+    		    	    success: function(data) {
+    		    	    	if(data == 1){
+    		    	    		modalAlertShow("회원탈퇴를 완료되었습니다.", "");
+    		    	    	}else if(data == 2){
+    		    	    		modalAlertShow("이미 회원탈퇴된 회원입니다.", "");
+    		    	    	}
+    		    	    },
+    		    	    error: function(error) {
+    		    	    	alert("오류 발생" + error);
+    		    		}
+    				});
+    			}
+    		});
+    	}
+    	
+	}
+      
+      
+</script>
 </body>
-
 </html>
