--- a/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
@@ -91,41 +91,53 @@
               </li>
               
               <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-circle"></i>
-              <p class="sTitle">
-                작가
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">작가정보조회</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">작가등급관리</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">작가탈퇴관리</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">휴면탈퇴관리</p>
-                </a>
-              </li>
-              
-            </ul>
-          </li>
+	            <a href="#" class="nav-link">
+	              <i class="nav-icon fas fa-circle"></i>
+	              <p class="sTitle">
+	                작가
+	                <i class="right fas fa-angle-left"></i>
+	              </p>
+	            </a>
+		            <ul class="nav nav-treeview">
+		              <li class="nav-item">
+		                <a href="#" class="nav-link">
+		                  <i class="far fa-circle nav-icon sTitle"></i>
+		                  <p class="sTitle">작가정보조회</p>
+		                </a>
+		              </li>
+		              <li class="nav-item">
+		                <a href="#" class="nav-link">
+		                  <i class="far fa-circle nav-icon sTitle"></i>
+		                  <p class="sTitle">작가등급관리</p>
+		                </a>
+		              </li>
+		              <li class="nav-item">
+		                <a href="#" class="nav-link">
+		                  <i class="far fa-circle nav-icon sTitle"></i>
+		                  <p class="sTitle">작가탈퇴관리</p>
+		                </a>
+		              </li>
+		              <li class="nav-item">
+		                <a href="#" class="nav-link">
+		                  <i class="far fa-circle nav-icon sTitle"></i>
+		                  <p class="sTitle">휴면탈퇴관리</p>
+		                </a>
+		              </li>
+		              
+		            </ul>
+          	</li>
+          	 <li class="nav-item has-treeview menu-open">
+          	 	<li class="nav-header">공통관리</li>
+          	 		<li class="nav-item has-treeview">
+          	 			<a href="/admin/comCode" class="nav-link" target="_blank">
+			              <i class="nav-icon fas fa-circle"></i>
+			              <p class="sTitle">
+			                공통코드
+			                <i class="right fas fa-angle-left"></i>
+			              </p>
+			            </a>
+          	 		</li>
+          	 </li>
          
           
         </ul>
