--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -12,112 +12,37 @@
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap">
 			<div class="contents">
-				
+			 	
 				<div class="con-wrap2">
-					<div class="con-left2">
-						<div class="cont-title4">
-							<h3>회원정보 수정</h3>
-						</div>
-					
-						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="heading1">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion1" href="#collapse1" aria-expanded="true" aria-controls="collapse1">
-											My Deal
-										</a>
-									</h4>
-								</div>
-								<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
-									<div class="panel-body">
-										<ul class="mypage-ul">
-											<li><a href="#">거래 내역</a></li>
-											<li><a href="#">등급 / 쿠폰 / 포인트</a></li>
-											<li><a href="#">문의 내역</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="heading2">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion2" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
-											포트폴리오
-										</a>
-									</h4>
-								</div>
-								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
-									<div class="panel-body">
-										<ul class="mypage-ul">
-											<li><a href="#">작가 정보</a></li>
-											<li><a href="#">나의작품</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="heading3">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion3" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
-											My Gallery
-										</a>
-									</h4>
-								</div>
-								<div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading3">
-									<div class="panel-body">
-										<ul class="mypage-ul">
-											<li><a href="#">소장품</a></li>
-											<li><a href="#">스크랩</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="heading3">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion4" href="#collapse4" aria-expanded="true" aria-controls="collapse4">
-											설정
-										</a>
-									</h4>
-								</div>
-								<div id="collapse4" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading4">
-									<div class="panel-body">
-										<ul class="mypage-ul">
-											<li class="active"><a href="#">회원 정보 수정</a></li>
-											<li><a href="#">알림 설정</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+				    <!-- left Include  -->
+					<th:block th:replace="thymeleaf/myPageLeft :: myPageLeftFragment"></th:block>
 					
 					<div class="con-right2">
 					
 						<div class="me-center">
 							<div class="member-box">
 								<div class="input-box input-group">
-									<input type="text" class="input-3" placeholder="아이디/이메일" />
+									<input type="text" class="input-3" id="uMbrId" name="uMbrId" placeholder="아이디/이메일" />
 									<button type="button" class="group-btn">인증하기</button>
 								</div>
 								<p class="inp-p">주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.</p>
 								
 								<div class="input-box">
-									<input type="text" class="input-3" placeholder="비밀번호" />
+									<input type="text" class="input-3" id="uMbrPasswrd" name="uMbrPasswrd" placeholder="비밀번호" />
 									<p class="inp-p">
 										영문/숫자/특수문자 2가지 이상 조합 (8~20자)<br/>
 										3개 이상 연속되거나 동일한 문자/숫자 제외, 아이디(이메일) 제외
 									</p>
 								</div>
 								<div class="input-box">
-									<input type="text" class="input-3" placeholder="비밀번호 확인" />
+									<input type="text" class="input-3" placeholder="비밀번호 확인" id="uMbrPasswrdConfirm" name="uMbrPasswrdConfirm"/>
 									<p class="inp-p">확인을 위해 새 비밀번호를 다시 입력해주세요.</p>
 								</div>					
 								<div class="input-box">
-									<input type="text" class="input-3" placeholder="이름" />
+									<input type="text" class="input-3" placeholder="이름" id="uMbrNm" name="uMbrNm"/>
 								</div>
 								<div class="input-box input-group">
-									<input type="text" class="input-3" placeholder="휴대폰 번호" />
+									<input type="text" class="input-3" placeholder="휴대폰 번호" id="uMbrCpNum" name="uMbrCpNum"/>
 									<button type="button" class="group-btn">인증하기</button>
 								</div>
 					
@@ -125,9 +50,9 @@
 									<button type="button" class="ba-btn1"><span>회원 정보 수정하기</span></button>
 								</div>
 								
-								<div class="mypage-btn">
+								<!-- <div class="mypage-btn">
 									<a href="#" class="my-btn">회원탈퇴</a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						
@@ -248,6 +173,58 @@ $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     // therefore delegated events won't be fired
     event.stopPropagation();
 });
+
+//회원 정보 호출
+function memberContentData(mbrSq) {
+	
+	console.log("memberContentData : "+ mbrSq);
+	
+	$.ajax({
+           type: "post",
+           url: "/myPage/memberContentData",
+           data: {
+        	   mbrSq : mbrSq
+            },
+           success: function(data) {
+        	   
+        	    
+        	 dataContent = data.memberContentData.memberContent[0];
+        	 
+        	 console.log(dataContent);
+        	 var mbrNm = dataContent.mbrNm						//이름
+        	 var mbrId = dataContent.mbrId						//아이디
+        	 var mbrNcknm = dataContent.mbrNcknm				//닉네임
+        	 var mbrEmail = dataContent.mbrEmail				//이메일
+        	 var mbrBirth = dataContent.mbrBirth				//생년월일
+        	 var mbrSexCd = dataContent.mbrSexCd				//성별
+        	 var mbrCpNum = dataContent.mbrCpNum				//휴대폰번호
+        	 var regDt = dataContent.regDt						//회원등록일시
+        	 var mbrHomeAddr = dataContent.mbrHomeAddr			//집주소
+        	 var mbrDelivryAddr = dataContent.mbrDelivryAddr	//배송지 주소
+        	 var useYn = dataContent.useYn						//사용여부
+        	 
+        	 
+        	 $("#uMbrNm").val(mbrNm);
+        	 $("#uMbrId").val(mbrId);
+        	 $("#mbrNcknm").val(mbrNcknm);
+        	 $("#uMbrCpNum").val(mbrCpNum);
+        	 
+		
+           },
+           error: function(error) {
+        	   var errorJson = JSON.stringify(error);
+               console.log(errorJson);
+           }
+	})
+}
+
+
+
+$( document ).ready(function() {
+	memberContentData(39);
+});
+ 
+
 </script>
     
 	
