F/O 헤더파일 수정

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -36,7 +36,7 @@
 	<div class="head-wrap">
 	<!-- Session GET -->
 	<div th:text="${session.sMbrSqVal}" style="display:none"></div>
-	<input type="text" id="sMbrSqVal">
+	<input type="hidden" id="sMbrSqVal">
 		
 		<div class="head">
 			<div class="h-logo"><a href="/main"><img src="resources/img/logo.png" /></a></div>
