--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -70,7 +70,7 @@
 			<div id="collapse4" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading4">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li class="active"><a href="#">회원 정보 수정</a></li>
+						<li class="active"><a href="/memberEdit">회원 정보 수정</a></li>
 						<li><a href="#">알림 설정</a></li>
 					</ul>
 				</div>
