LEFT MENU 선택시 "ACTIVE" CLASS ADD

--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -73,5 +73,18 @@
 	</div>
 </body>
 </html>
+<!-- LEFT MENU ACTIVE -->
+<script>
+$(function () {
+		var url = window.location.pathname,
+		urlRegExp = new RegExp(url.replace(/\/$/, '') + "$");  
+        
+        $('a').each(function () {
+            if (urlRegExp.test(this.href.replace(/\/$/, ''))) {
+                $(this).parent().addClass('active');
+			}
+		});
+});
+</script>
 
 </div>
