--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -18,9 +18,9 @@
 			<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li><a href="#">거래 내역</a></li>
-						<li><a href="#">등급 / 쿠폰 / 포인트</a></li>
-						<li><a href="#">문의 내역</a></li>
+						<li class=""><a href="#">거래 내역</a></li>
+						<li class=""><a href="#">등급 / 쿠폰 / 포인트</a></li>
+						<li class=""><a href="#">문의 내역</a></li>
 					</ul>
 				</div>
 			</div>
@@ -36,8 +36,8 @@
 			<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li><a href="#">작가 정보</a></li>
-						<li><a href="#">나의작품</a></li>
+						<li class=""><a href="#">작가 정보</a></li>
+						<li class=""><a href="#">나의작품</a></li>
 					</ul>
 				</div>
 			</div>
@@ -53,8 +53,8 @@
 			<div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading3">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li><a href="#">소장품</a></li>
-						<li><a href="#">스크랩</a></li>
+						<li class=""><a href="#">소장품</a></li>
+						<li class=""><a href="#">스크랩</a></li>
 					</ul>
 				</div>
 			</div>
@@ -69,9 +69,10 @@
 			</div>
 			<div id="collapse4" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading4">
 				<div class="panel-body">
-					<ul class="mypage-ul">
-						<li class="active"><a href="/memberEdit">회원 정보 수정</a></li>
-						<li><a href="#">알림 설정</a></li>
+					<ul class="mypage-ul"><!--class="active"-->
+						<li class=""><a href="/memberEdit">회원 정보 수정</a></li>
+						<li class=""><a href="/withdrawal">회원탈퇴</a></li>
+						<li class=""><a href="#">알림 설정</a></li>
 					</ul>
 				</div>
 			</div>
